Click functionality set

--- a/index-movie.html
+++ b/index-movie.html
@@ -13,7 +13,7 @@
 <body>
 <!-- Image and text -->
 <nav class="navbar navbar-light" id="nav_bar">
-    <a class="navbar-brand" id="nav_logo" href="#">Show Me The Money!</a>
+    <a class="navbar-brand" id="nav_logo" href="#">R.C. Studios!</a>
 </nav>
 <header>
 <div class="jumbotron jumbotron-fluid" id="jumbo">
@@ -32,21 +32,21 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -64,14 +64,40 @@
     </div>
 </main>
 <article>
+    <div id="splash">
+        <div id="popcorn-guy">
+            <img src="img/popcornguy.jpg">
+        </div>
+        <div class="card mb-3 d-none cardTog" style="max-width: 540px;">
+            <div class="row no-gutters">
+                <div class="col-md-4">
+                    <img src="img/theaterentrance.jpg" class="card-img" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 id="title" class="card-title">Title</h5>
+                        <div id="rating-box"><small id="rating">padadw</small></div>
+                        <p id="info" class="card-text"></p>
+                        <p class="card-text"><small id="rank"></small></p>
+                        <p id="genre" class="card-text"></p>
+                        <p id="actors" class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</article>
+<article>
     <section>
         <div id="search-card"></div>
-        <div id="card-display"></div>
+        <div id="img-display">
+
+        </div>
     </section>
 
 </article>
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<script src="js/movie.js"></script>
+
 <script src="https://kit.fontawesome.com/2a6f78e7e8.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -82,5 +108,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
+<script src="js/movie.js"></script>
 </body>
 </html>
