fixed checkbox for genre application v0.35

--- a/index-movie.html
+++ b/index-movie.html
@@ -129,6 +129,18 @@
                                         <option value="NC-17">NC-17</option>
                                     </select>
                                     <hr>
+                                    <p>Genre: (select all that apply)</p>
+                                    <input type="checkbox" id="action" name="action" value="Action/Adventure">
+                                    <label for="action">Action/Adventure</label><br>
+                                    <input type="checkbox" id="comedy" name="comedy" value="Comedy">
+                                    <label for="comedy">Comedy</label><br>
+                                    <input type="checkbox" id="romance" name="romance" value="Romance">
+                                    <label for="romance">Romance</label><br>
+                                    <input type="checkbox" id="drama" name="drama" value="Drama">
+                                    <label for="drama">Drama</label><br>
+                                    <input type="checkbox" id="horror" name="horror" value="Horror">
+                                    <label for="horror">Horror</label>
+                                    <br>
                                     <label for="add-des">Movie Description:</label>
                                     <br>
                                     <textarea class="w-100" name="add-des" id="add-des" cols="30" rows="5" maxlength="255" placeholder="Type your description here..."></textarea>
