--- a/index-movie.html
+++ b/index-movie.html
@@ -148,7 +148,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button id="update-data" type="button" class="btn btn-primary">Add Movie</button>
+                                <button id="update-data" type="button" class="btn btn-primary" data-dismiss="modal">Add Movie</button>
                             </div>
                         </div>
                     </div>
