--- a/index-movie.html
+++ b/index-movie.html
@@ -83,8 +83,8 @@
                         <p id="actors" class="card-text"></p>
                         <div>
                             <button type="button" id="delete">Delete</button>
-                            <button></button>
-                            <button></button>
+                            <button type="button" id="edit" data-toggle="modal" data-target="#edit-form">Edit</button>
+                            <button type="button" id="book">Book</button>
                         </div>
                     </div>
                 </div>
@@ -160,6 +160,56 @@
                 </div>
             </div>
         </div>
+
+<!--        Edit Modal-->
+        <div class="modal fade" id="edit-form" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="editModalLabel">Edit Movie:</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form id="editor">
+                            <label for="add-title"> Movie Title:</label>
+                            <input type="text" id="edit-title">
+                            <label for="add-rating">Movie Rating:</label>
+                            <select name="add-rating" id="edit-rating">
+                                <option value="G">G</option>
+                                <option value="PG">PG</option>
+                                <option value="PG-13">PG-13</option>
+                                <option value="R">R</option>
+                                <option value="NC-17">NC-17</option>
+                            </select>
+                            <hr>
+                            <p>Genre: (select all that apply)</p>
+                            <input type="checkbox" id="edit-action" name="action" value="Action/Adventure">
+                            <label for="action">Action/Adventure</label><br>
+                            <input type="checkbox" id="edit-comedy" name="comedy" value="Comedy">
+                            <label for="comedy">Comedy</label><br>
+                            <input type="checkbox" id="edit-romance" name="romance" value="Romance">
+                            <label for="romance">Romance</label><br>
+                            <input type="checkbox" id="edit-drama" name="drama" value="Drama">
+                            <label for="drama">Drama</label><br>
+                            <input type="checkbox" id="edit-horror" name="horror" value="Horror">
+                            <label for="horror">Horror</label>
+                            <br>
+                            <label for="add-des">Movie Description:</label>
+                            <br>
+                            <textarea class="w-100" name="add-des" id="edit-des" cols="30" rows="5" maxlength="255" placeholder="Type your description here..."></textarea>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button id="edit-data" type="button" class="btn btn-primary" data-dismiss="modal">Submit Edits</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
         <div class="d-flex justify-content-center">
             <div class="lds-grid"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
         </div>
