--- a/index-movie.html
+++ b/index-movie.html
@@ -23,34 +23,23 @@
         </div>
     </div>
 </header>
-<main>
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+<main class="container mb-5">
+    <div class="row justify-content-center">
+    <div id="carouselExampleCaptions" class="carousel slide slider row justify-content-center" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner">
+        <div class="carousel-inner inner-container justify-content-center">
             <div class="carousel-item active">
-                <img src="" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                </div>
+                <img src="" id="num0" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
+                <img src="" id="num1" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-                </div>
+                <img src="" id="num2" class="d-block w-100" alt="...">
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
@@ -62,13 +51,14 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+    </div>
 </main>
 <article>
     <div id="splash" class="d-flex justify-content-center">
         <div id="popcorn-guy" class="my-2">
             <img class="rounded-circle" src="img/popcornguy.jpg">
         </div>
-        <div class="card mb-3 d-none cardTog" style="max-width: 540px;">
+        <div class="card mb-3 d-none cardTog" id="des-pane" style="max-width: 540px;">
             <div class="row no-gutters">
                 <div class="col-md-4">
                     <img id="cardPoster" class="card-img" alt="Movie Picture">
