--- a/index-movie.html
+++ b/index-movie.html
@@ -13,7 +13,9 @@
 <body>
 <!-- Image and text -->
 <nav class="navbar navbar-light" id="nav_bar">
-    <a class="navbar-brand" id="nav_logo" href="#">R.C. Studios!</a>
+    <div class="w-100">
+        <a class="ml-auto" id="nav_logo" href="#">R.C. Studios!</a>
+    </div>
 </nav>
 <header>
 <div class="jumbotron jumbotron-fluid" id="jumbo">
