--- a/index-movie.html
+++ b/index-movie.html
@@ -182,10 +182,11 @@
                             </div>
                             <div class="modal-body">
                                 <form id="addition">
-                                    <label for="add-title"> Movie Title:</label>
+                                    <label for="add-title" class="my-3"> Movie Title:</label>
                                     <input type="text" id="add-title">
+                                    <br>
                                     <label for="add-rating">Movie Rating:</label>
-                                    <select name="add-rating" id="add-rating">
+                                    <select name="add-rating" id="add-rating" class="mr-3">
                                         <option value="G">G</option>
                                         <option value="PG">PG</option>
                                         <option value="PG-13">PG-13</option>
@@ -215,7 +216,7 @@
                                     <input class="checkBoxes2" type="checkbox" id="horror" name="horror" value="Horror">
                                     <label for="horror">Horror</label>
                                     <br>
-                                    <label for="add-des">Movie Description:</label>
+                                    <label for="add-des" class="mt-2">Movie Description:</label>
                                     <br>
                                     <textarea onkeyup="counter(this)" class="w-100" name="add-des" id="add-des" cols="30" rows="5"
                                               maxlength="256" placeholder="Type your description here..."></textarea>
@@ -224,7 +225,7 @@
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button id="update-data" type="button" class="btn btn-primary" data-dismiss="modal">Add
+                                <button id="update-data" type="button" class="btn purp" data-dismiss="modal">Add
                                     Movie
                                 </button>
                             </div>
@@ -249,10 +250,11 @@
                     </div>
                     <div class="modal-body">
                         <form id="editor">
-                            <label for="add-title"> Movie Title:</label>
+                            <label for="add-title" class="my-3"> Movie Title:</label>
                             <input type="text" id="edit-title">
+                            <br>
                             <label for="add-rating">Movie Rating:</label>
-                            <select name="add-rating" id="edit-rating">
+                            <select name="add-rating" id="edit-rating" class="mr-3">
                                 <option value="G">G</option>
                                 <option value="PG">PG</option>
                                 <option value="PG-13">PG-13</option>
@@ -290,7 +292,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button id="edit-data" type="button" class="btn btn-primary" data-dismiss="modal">Submit Edits
+                        <button id="edit-data" type="button" class="btn purp" data-dismiss="modal">Submit Edits
                         </button>
                     </div>
                 </div>
