added more search paramaters to search functionality v 1.2

--- a/index-movie.html
+++ b/index-movie.html
@@ -130,7 +130,7 @@
         <div id="search-card" class="container-fluid my-5">
             <div class="row">
                 <form class="col-12 text-center my-3 search">
-                    <label for="filter-search" class="mr-3 searchLabel">Search Title:</label>
+                    <label for="filter-search" class="mr-3 searchLabel">Search Movie:</label>
                     <input id="filter-search" type="text" class="mr-2 searchBar">
                     <button id="filter-button" class="rounded-pill" type="button">
                         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" id="searchIcon"
