--- a/index-movie.html
+++ b/index-movie.html
@@ -35,20 +35,20 @@
                 <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner inner-container justify-content-center">
-                <div class="carousel-item active">
-                    <img src="" id="num0" class="d-block w-100" alt="...">
+                <div id="img-container0" class="carousel-item active">
+                    <img data-serv="" id="num0" src="" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-sm-block">
                         <h5 id="0"></h5>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="" id="num1" class="d-block w-100" alt="...">
+                    <img id="num1" src="" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-sm-block">
                         <h5 id="1"></h5>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="" id="num2" class="d-block w-100" alt="...">
+                    <img id="num2" src="" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-sm-block">
                         <h5 id="2"></h5>
                     </div>
@@ -325,7 +325,7 @@
         </div>
 
         <!--        Movie Posters-->
-        <div id="img-display"></div>
+        <div id="img-display" class="click-img"></div>
     </section>
 
 </article>
